[gd_scene load_steps=3 format=3 uid="uid://disvylvyqhymt"]

[ext_resource type="Script" path="res://Scripts/GUI/shop.gd" id="1_87e2b"]
[ext_resource type="Texture2D" uid="uid://bnyuvu251rgak" path="res://Assets/16x16 RPG Item Pack/Item__00.png" id="2_8btxy"]

[node name="Shop" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_87e2b")

[node name="Panel" type="Panel" parent="."]
offset_left = 56.0
offset_top = 88.0
offset_right = 1128.0
offset_bottom = 600.0

[node name="ShopItems" type="GridContainer" parent="."]
offset_left = 640.0
offset_top = 128.0
offset_right = 704.0
offset_bottom = 192.0
columns = 3

[node name="ItemInfo" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 56.0
offset_top = 72.0
offset_right = 448.0
offset_bottom = 480.0

[node name="item_name" type="Label" parent="ItemInfo"]
layout_mode = 0
offset_left = 72.0
offset_top = 24.0
offset_right = 232.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 30
text = "Sword"
horizontal_alignment = 1
vertical_alignment = 1

[node name="item_desc" type="Label" parent="ItemInfo"]
layout_mode = 0
offset_left = 80.0
offset_top = 320.0
offset_right = 279.0
offset_bottom = 376.0
text = "This is a sword"
vertical_alignment = 1

[node name="item_sprite" type="Sprite2D" parent="ItemInfo"]
position = Vector2(144, 208)
scale = Vector2(15, 15)
texture = ExtResource("2_8btxy")

[node name="Buy" type="Button" parent="."]
offset_left = 416.0
offset_top = 512.0
offset_right = 512.0
offset_bottom = 552.0
text = "Buy
"

[node name="Close" type="Button" parent="."]
offset_left = 872.0
offset_top = 512.0
offset_right = 956.0
offset_bottom = 552.0
text = "Close
"

[connection signal="pressed" from="Buy" to="." method="_on_buy_pressed"]
[connection signal="pressed" from="Close" to="." method="_on_close_pressed"]
